syntax = "proto2";

package stremio.core.models;

option java_package = "com.stremio.core.models";

import "stremio/core/models/loadable.proto";
import "stremio/core/types/meta_item.proto";

message StreamingServer {
  required Selected selected = 1;
  optional string base_url = 2;
  optional string remote_url = 3;
  required LoadableSettings settings = 4;
  optional LoadableTramvai tramvai = 5;
  required LoadablePlaybackDevices playback_devices = 6;
  optional LoadableStatistics statistics = 7;

  message Selected {
    required string transport_url = 1;
  }
  message StatisticsRequest {
    required string info_hash = 1;
    required int32 file_index = 2;
  }
  message Settings {
    required string app_path = 1;
    required string cache_root = 2;
    required string server_version = 3;
    optional string remote_https = 4;
    optional string transcode_profile = 5;
    optional double cache_size = 6;
    required bool proxy_streams_enabled = 7;
    required uint64 bt_max_connections = 8;
    required uint64 bt_handshake_timeout = 9;
    required uint64 bt_request_timeout = 10;
    required double bt_download_speed_soft_limit = 11;
    required double bt_download_speed_hard_limit = 12;
    required uint64 bt_min_peers_for_stable = 13;
  }
  message Statistics {
    required string name = 1;
    required string info_hash = 2;
    required double download_speed = 6;
    required double upload_speed = 7;
    required int64 downloaded = 8;
    required int64 uploaded = 9;
    required int64 unchoked = 10;
    required int64 peers = 11;
    required int64 queued = 12;
    required int64 unique = 13;
    required int64 connection_tries = 14;
    required bool peer_search_running = 15;
    required int64 stream_len = 16;
    required string stream_name = 17;
    required double stream_progress = 18;
    required int64 swarm_connections = 19;
    required bool swarm_paused = 20;
    required int64 swarm_size = 21;
  }
  message PlaybackDevice {
    required string id = 1;
    required string name = 2;
    required string type = 3;
  }
}

message LoadableSettings {
  oneof content {
    Loading loading = 1;
    Error error = 2;
    StreamingServer.Settings ready = 3;
  }
}

message LoadableBaseUrl {
  oneof content {
    Loading loading = 1;
    Error error = 2;
    string ready = 3;
  }
}

message LoadableTramvai {
  oneof deeplinks {
    Loading loading = 1;
    Error error = 2;
    stremio.core.types.MetaItemDeepLinks ready = 3;
  }
}

message LoadablePlaybackDevices {
  oneof content {
    Loading loading = 1;
    Error error = 2;
    PlaybackDevices ready = 3;
  }
}

message LoadableStatistics {
  oneof content {
    Loading loading = 1;
    Error error = 2;
    StreamingServer.Statistics ready = 3;
  }
}

message PlaybackDevices {
  repeated StreamingServer.PlaybackDevice devices = 1;
}
